auth-service/src/main/java/com/example/authservice/error/UserAlreadyExistsException.java
package com.example.authservice.error;


public class UserAlreadyExistsException extends ApplicationException {

    public UserAlreadyExistsException(String message) {
        super(message);
    }

    public UserAlreadyExistsException(String message, Throwable cause) {
        super(message, cause);
    }
}
